fixed viewport on mobile

--- a/style.css
+++ b/style.css
@@ -37,7 +37,7 @@
       overflow-x: auto;
       /* white-space: nowrap; */
       display: inline-block;
-      line-height: 30vh;
+      line-height: 30dvh;
       text-align: right;
     }
 
